best-practices-cel/disallow-cri-sock-mount/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-container-sock-mounts
status:
  ready: true
